tests/compile_fail/enum_with_no_variants.stderr
error: proc-macro derive panicked
 --> tests/compile_fail/enum_with_no_variants.rs:4:10
  |
4 | #[derive(StandardDistribution)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Cannot derive StandardDistribution for enums with zero variants
